fix for content overflow

--- a/postcss/blocks/feature.css
+++ b/postcss/blocks/feature.css
@@ -28,7 +28,8 @@
   @media (--tablet-widths) {
     max-width: 33%;
     padding: 4.5rem;
-    height: 25.6rem;
+    padding-bottom: 2rem;
+    min-height: 25.6rem;
     flex-basis: 25.6rem;
     flex-grow: 1;
     order: 1;
@@ -99,13 +100,13 @@
   font-size: $font-size__title;
 
   @media (--tablet-widths) {
-    padding: 0 0.75rem;
+    padding: 0 0.6rem;
 
     font-size: $font-size__title--secondary;
   }
 
   @media (--desktop-widths) {
-    padding: 0 6.45rem;
+    padding: 0 6rem;
   }
 }
 
